# re-nobm-pcc

./: .env  .gitattributes  .gitconfig  .gitignore  README.md  data.dvc  debug-data.dvc  dvc.yaml  environment.yml  params.yaml  pyproject.toml  task
.dvc/: config
data/: .gitignore  dvc.yaml  metrics.json  nobm.dvc  oasim_param.dvc  task
docs/: .gitignore
models/logs/: .gitignore
notebooks/: evaluate.ipynb  experiments.ipynb  legacy.ipynb  preview.ipynb
re_nobm_pcc/: __init__.py  cnn.py  evaluate.py  kit.py  learn.py  perceptron.py  phy2lwn.py  preprocess.py  preprocessing.py  simulate.py  viz.py
scripts/: kit.py  perceptron.py  preprocessing.py
tests/: test_all.py
