[tool.poetry]
name = "re-nobm-pcc"
version = "0.2.0"
description = ""
authors = []

[tool.poetry.dependencies]
dask = {extras = ["array"], version = "^2023.3.2"}
hvplot = "^0.9.0"
netcdf4 = "^1.6.3"
oasim-rrs = {git = "https://oceandata.sci.gsfc.nasa.gov/rcs/ian/oasim-rrs.git"}
python = "^3.10,<3.12"
scipy = "^1.8.1"
tensorflow = "~2.14"
# tensorflow-addons = "^0.20.0" # TODO replace when tf.keras.metrics.R2score stable
# tensorflow-probability = "^0"
# tensorflow-datasets = "^4.9.2"
xarray = "^2023.10.1"
panel = "^1.2.2"

[tool.poetry.group.dev.dependencies]
dvc = {version = "^2.9.5", extras = ["s3"]}
ipykernel = "^6.21.3"
# ipywidgets = "^8.0.6"
pytest = "^7.0.1"
black = "^23.7.0"
nbconvert = "^7.10.0"
